--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 # will deploy to name.domain.workers.dev
-name = "test"
+name = "test1"
 type = "webpack"
-account_id = ""
+account_id = "9a3a86112b1aba2197b658472122d620"
 workers_dev = true
