--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "dream",
   "devDependencies": {},
   "dependencies": {
-    "qr-image": "^3.2.0"
+    "cheerio": "^1.0.0-rc.3",
+    "iconv-lite": "^0.6.2",
+    "query-string": "^6.13.2"
   }
 }
