--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,7 @@
 # will deploy to name.domain.workers.dev
-name = "test1"
+name = "9txs"
 type = "webpack"
 account_id = "9a3a86112b1aba2197b658472122d620"
 workers_dev = true
+[dev]
+port=9000
