--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,10 @@
 # will deploy to name.domain.workers.dev
-name = "randomtxt"
-type = "webpack"
 account_id = "9a3a86112b1aba2197b658472122d620"
+kv_namespaces = [
+  {binding = "KV", preview_id = "6b5f5dafb5da47febd2387ee571c3289", id = "6b5f5dafb5da47febd2387ee571c3289"},
+]
+name = "9txs"
+type = "webpack"
 workers_dev = true
 [dev]
-port=9000
+port = 9000
